fixed number and letter spacing for good

--- a/sass/create.scss
+++ b/sass/create.scss
@@ -141,19 +141,69 @@ body {
   // padding: 0;
 }
 
-.cell {
+.cell5 {
   /* center the celll content */
   justify-content: center;
   align-items: center;
-  display: flex;
+  // text-align: center;
+  // display: flex;
   font-family: Arial;
   font-size: 3rem;
   font-weight: bold;
   background: white;
 }
 
+.cell10 {
+  /* center the celll content */
+  justify-content: center;
+  align-items: center;
+  // text-align: center;
+  // display: flex;
+  font-family: Arial;
+  font-size: 2rem;
+  font-weight: bold;
+  background: white;
+}
+
+.cell15 {
+  /* center the celll content */
+  justify-content: center;
+  align-items: center;
+  // text-align: center;
+  // display: flex;
+  font-family: Arial;
+  font-size: 1rem;
+  font-weight: bold;
+  background: white;
+}
+
 .pCell {
-  padding-left: 5;
+  // padding-left: 5;
+  left: 10% !important;
+  top: 0% !important;
+  position: absolute;
+}
+
+.pNumber5 {
+  font-size: 20;
+}
+
+.pNumber10 {
+  font-size: 15;
+}
+
+.pNumber15 {
+  font-size: 10;
+}
+
+.pLetter {
+  text-align: center;
+  // margin-top: 15;
+  // margin-left: 35;
+  // width: min-content;
+  // left: 0px;
+  width: 100%;
+  margin-top: 15;
 }
 
 .solve {
@@ -386,3 +436,13 @@ a {
 .button-19:disabled {
   cursor: auto;
 }
+
+/// Letter i
+//** position: absolute;
+/* left: -50px; */
+/* top: -30px; */
+/* right: 40px; */
+/* top: -30px; */
+// font-size: 20px;
+//** top: 0%;
+//** left: 10%;
